--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,11 +29,14 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: engineerd/configurator@v0.0.5
+    - uses: suisei-cn/actions-download-file@v1
+      id: downloadVLC
+      name: Download VLC
       with:
-        name: "vlc"
         url: "https://download.videolan.org/pub/videolan/vlc/last/win64/vlc-3.0.12-win64.zip"
-        pathInArchive: "vlc-3.0.12/libvlc.dll" 
+        target: .
+    - name: Extract VLC
+      run: powershell.exe Expand-Archive -Path vlc-3.0.12-win64.zip -DestinationPath .
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
