--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,7 +26,9 @@ jobs:
   build-windows:
 
     runs-on: windows-latest
-
+    env:
+     PYTHON_VLC_MODULE_PATH: D:\\a\\DD_Monitor\\DD_Monitor\\vlc-3.0.12
+     PYTHON_VLC_LIB_PATH: D:\\a\\DD_Monitor\\DD_Monitor\\vlc-3.0.12\\libvlc.dll
     steps:
     - uses: actions/checkout@v2
     - uses: suisei-cn/actions-download-file@v1
@@ -38,9 +40,6 @@ jobs:
     - name: Extract VLC
       run: |
         powershell.exe Expand-Archive -Path vlc-3.0.12-win64.zip -DestinationPath .
-        powershell.exe Move-Item -Path .\vlc-3.0.12\libvlc.dll -Destination .
-        powershell.exe Move-Item -Path .\vlc-3.0.12\libvlccore.dll -Destination .
-        powershell.exe Move-Item -Path .\vlc-3.0.12\plugins -Destination .
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
