--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python application
+name: DDMonitor Build
 
 on: [push, pull_request]
 
@@ -27,8 +27,8 @@ jobs:
 
     runs-on: windows-latest
     env:
-     PYTHON_VLC_MODULE_PATH: D:\\a\\DD_Monitor\\DD_Monitor\\vlc-3.0.12
-     PYTHON_VLC_LIB_PATH: D:\\a\\DD_Monitor\\DD_Monitor\\vlc-3.0.12\\libvlc.dll
+     PYTHON_VLC_MODULE_PATH: $GITHUB_WORKSPACE\\vlc-3.0.12
+     PYTHON_VLC_LIB_PATH: $GITHUB_WORKSPACE\\vlc-3.0.12\\libvlc.dll
     steps:
     - uses: actions/checkout@v2
     - uses: suisei-cn/actions-download-file@v1
